# alexandria

./: .env  .gitignore  .taurignore  Cargo.toml  README.md  Trunk.toml  docker-compose.yaml  flake.nix  index.html  pnpm-lock.yaml  vite.config.ts
alexandria/: package.json  pnpm-lock.yaml
alexandria/src/: App.tsx
alexandria/src-tauri/: Cargo.toml  Dockerfile  tauri.conf.json
alexandria/src-tauri/migrations/: 20240107024146_resource.sql
alexandria/src-tauri/src/: main.rs
docker/: migrate.Dockerfile
leptos/: Cargo.toml  index.html
leptos/src/: main.rs
shared/models/: Cargo.toml
shared/models/migrations/: 20240107024146_resource.sql
shared/models/src/: lib.rs
shared/models/tests/data/: dummy.sql
src/: App.tsx  main.rs
src-tauri/: Cargo.toml  backend.Dockerfile  migrate.Dockerfile
src-tauri/migrations/: 20240107024146_resource.sql
src-tauri/src/: main.rs
src-tauri/tests/data/: dummy.sql
style/: main.scss
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: lib.rs  main.rs
