[package]
name = "alexandria-leptos"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
leptos = { version = "0.5.6", features = ["csr"] }

[dependencies.tauri-sys]
git = "https://github.com/JonasKruckenberg/tauri-sys"
rev = "143b8ec669a6dadddbe1970db0ca8d663d62c4b6"
features = ["all"]
