[package]
name = "alexandria-tauri"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std", "tls-native-tls", "postgres", "time", "migrate"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
reqwest = "0.11.23"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde.workspace = true
serde_json.workspace = true
models.workspace = true

[lib]
name = "alexandria_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]
